# WordListParse

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp
inc/: BaseParse.h  CustomData.h  WordListParse.h  base_parser.h  custom_data.h  word_list_parse.h
resource/: demo.txt  unit_test.txt
src/: base_parser.cpp  custom_data.cpp  demo.cpp  unit_test.cpp
test/: CMakeLists.txt  unit_test.cpp
